--- a/src/assets/scss/socialv-design-system/components/footer/_footer.scss
+++ b/src/assets/scss/socialv-design-system/components/footer/_footer.scss
@@ -5,11 +5,12 @@ Footer
 	padding:0.938rem;
 	margin-left: 15rem;
 	width: calc(100% - 33rem);
+	height: auto;
 	background: var(--#{$prefix}gray-900);
 	@if $enable-shadows == true {
 		@include shadow-mixin($box-shadow);
 	}
-	
+
 	@if $enable-transitions == true {
 		@include transition-mixin(all 0.3s ease-in-out);
 	}
@@ -64,18 +65,18 @@ Footer
              text-align: center !important;
 			 justify-content: center !important;
         }
-    }  
+    }
 }
 .iq-float-menu-item.dropbtn {
 	border: none;
-  }  
-  
-  
+  }
+
+
   .drop-one {
 	position: relative;
 	display: inline-block;
   }
-  
+
   .dropdown-content {
 	display: none;
 	position: absolute;
@@ -85,18 +86,18 @@ Footer
 	z-index: 1;
 	right: -3px;
 	top: 0;
-	
+
   }
-  
+
   .dropdown-content a {
 	color: black;
 	padding: 12px 16px;
 	text-decoration: none;
 	display: block;
   }
-  
+
   .dropdown-content a:hover {background-color: #ddd;}
-  
+
   .dropbtn.iq-float-menu-item:hover .dropdown-content {display: block;}
   .customizer-btn {
     -webkit-transform: rotate(-45deg);
