--- a/src/assets/scss/socialv-design-system/components/chat/_chat.scss
+++ b/src/assets/scss/socialv-design-system/components/chat/_chat.scss
@@ -515,23 +515,23 @@ button.close-btn-res {
   min-width: 200px;
   word-wrap: wrap;
   margin-bottom: 10px;
-  border-radius: 18px;
+  border-radius: 5px;
   transition: all 0.3s ease;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 }
 
 .message-sent {
-  background-color: #0084ff;
+  background-color: #4285f4;
   color: white;
-  border-radius: 18px 18px 0 18px;
+  // border-radius: 18px 18px 0 18px;
   align-self: flex-end;
   margin-left: auto;
 }
 
 .message-received {
-  background-color: #e5e5ea;
+  background-color: #ededed;
   color: black;
-  border-radius: 18px 18px 18px 0;
+  // border-radius: 18px 18px 18px 0;
   align-self: flex-start;
   margin-right: auto;
 }
